Correction de contrast

--- a/style.css
+++ b/style.css
@@ -804,7 +804,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-  background-color: #ca480c;
+  background-color: #6e250c; /* #ca480c;*avant*/
 }
 
 .tc-white {
